# visbot-analysis-agent

./: .env.example  .gitignore  README.md  package-lock.json  requirements.txt
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/routes/: analysis.py  assets.py  chat.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/prompts/: analysis_planner.txt  request_planner.txt  result_analyst.txt  sql_generator.txt
backend/app/services/: analysis_agent.py  asset_analysis_instructions.py  asset_catalog.py  data_repository.py  deterministic_analysis.py  live_asset_registry.py  llm_service.py  nl_to_sql.py  report_builder.py  scheduling_agent.py  sql_guard.py  trend_chart_service.py
backend/app/templates/: report.html
backend/data/: asset_catalog.yaml
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/components/: chat-shell.tsx
frontend/components/ui/: sparkles-text.tsx  spline-scene-basic.tsx  splite.tsx  spotlight.tsx
frontend/lib/: api.ts  types.ts
